<resources>
    <string name="app_name">Financial Advisor</string>
    <string name="spent_message">Today you spent:</string>
    <string name="add_expense">Add expense</string>
    <string name="delete_database">Delete database</string>
    <string name="expenses">Expenses</string>
    <string name="today">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="type">Type</string>
</resources>
