<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_expenses"
            android:icon="@drawable/ic_expenses"
            android:title="@string/expenses" >
            <menu>
                <group
                    android:checkableBehavior="single">
                    <item android:id="@+id/nav_today"
                        android:title="@string/today" />
                    <item android:id="@+id/nav_month"
                        android:title="@string/month" />
                    <item android:id="@+id/nav_year"
                        android:title="@string/year" />
                </group>
            </menu>
        </item>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />
    </group>
</menu>